--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ DB_HOST='localhost'
 DB_PORT='5432'
 DB_USERNAME='postgres'
 DB_PASSWORD='postgres'
-DB_NAME='test-node'
-DB_NAME_TEST='test-node-test'
+DB_NAME='node-test'
+DB_NAME_TEST='node-test-test'
