--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "logger": "^0.0.1",
     "nodemon": "^2.0.20",
