--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ DB_USERNAME='postgres'
 DB_PASSWORD='postgres'
 DB_NAME='node-test'
 DB_NAME_TEST='node-test-test'
+SECRET_PRIVATE_KEY = 'Th1s1s4n3x4mpl3K3y'
