login with google implemented

--- a/.env
+++ b/.env
@@ -6,4 +6,6 @@ DB_USERNAME='postgres'
 DB_PASSWORD='postgres'
 DB_NAME='node-test'
 DB_NAME_TEST='node-test-test'
-SECRET_PRIVATE_KEY = 'Th1s1s4n3x4mpl3K3y'
+SECRET_PRIVATE_KEY='Th1s1s4n3x4mpl3K3y'
+GOOGLE_CLIENT_ID='607831574425-meb1opsdmfrutn291rov0d19911gu960.apps.googleusercontent.com'
+GOOGLE_SECRET_CLIENT_ID='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'
