--- a/package.json
+++ b/package.json
@@ -14,13 +14,19 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "express-validator": "^6.15.0",
+    "google-auth-library": "^8.7.0",
     "jsonwebtoken": "^9.0.0",
     "logger": "^0.0.1",
     "nodemon": "^2.0.20",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-google-plus-token": "^2.1.0",
     "pg": "^8.9.0",
     "pino": "^8.10.0",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.0"
