some api integrations test

--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ DB_NAME_TEST='node-test-test'
 SECRET_PRIVATE_KEY='Th1s1s4n3x4mpl3K3y'
 GOOGLE_CLIENT_ID='607831574425-meb1opsdmfrutn291rov0d19911gu960.apps.googleusercontent.com'
 GOOGLE_SECRET_CLIENT_ID='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'
+NEWS_API_KEY='aecbd602ffe942a792d6d4f392a02cb8'
+MOVIES_API_KEY='2a544144941031f5fe07362c274358ba'
