--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "just testing",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest & --runInBand & --forceExit & --detectOpenHandles & --silent",
+    "cover": "npm run test & -- & --coverage",
     "start-dev": "nodemon --inspect index.js"
   },
   "author": "Nicolas Infante",
@@ -17,6 +18,7 @@
     "express-session": "^1.17.3",
     "express-validator": "^6.15.0",
     "google-auth-library": "^8.7.0",
+    "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.0",
     "logger": "^0.0.1",
     "nodemon": "^2.0.20",
@@ -26,6 +28,7 @@
     "pg": "^8.9.0",
     "pino": "^8.10.0",
     "sequelize": "^6.28.0",
+    "supertest": "^6.3.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
