--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-validator": "^6.15.0",
+    "form-data": "^4.0.0",
     "google-auth-library": "^8.7.0",
     "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.0",
